--- a/Configuration/ExtensionBuilder/settings.yaml
+++ b/Configuration/ExtensionBuilder/settings.yaml
@@ -59,7 +59,7 @@ overwriteSettings:
         Layouts: keep
         Partials: keep
         Templates: keep
-  Documentation: merge
+  Documentation: keep
   user_extension.svg: keep
   ext_localconf.php: merge
   ext_tables.php: keep
