[TASK] Added Email

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
            {
                "name": "Florian Eibisberger",
                "role": "Developer",
-               "email": "",
+               "email": "cookiemanager@coding-freaks.com",
                "homepage": "https://coding-freaks.com"
            }
     ],
