[TASK] Changed Static Data Import to Upgrade Wizard

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -25,7 +25,7 @@ project     = Coding Freaks Cookie Manager
 # ...   (recommended) version, displayed next to title (desktop) and in <meta name="book-version"
 # .................................................................................
 
-release     = 1.0.0
+release     = 1.0.1
 
 # .................................................................................
 # ...  (recommended) displayed in footer
@@ -39,8 +39,8 @@ copyright   = by Florian Eibisberger
 # ...  (recommended) to get the "Edit me on Github Button"
 # .................................................................................
 
-#github_branch        = master
-#github_repository    = TYPO3-Documentation/TYPO3CMS-Example-ExtensionManual
+github_branch        = main
+github_repository    = https://github.com/eibiflo/cf_cookiemanager/
 
 # .................................................................................
 # ...  (recommended) Fill in values to get links in the "Related Links" section
