--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     ],
     "license": "GPL-2.0-or-later",
     "require": {
-        "typo3/cms-core": "^11.5"
+        "php": "^7.4 || ^8.1",
+        "typo3/cms-core": "^11.5",
+        "ext-xml": "*"
     },
 
     "require-dev": {
