--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -22,3 +22,9 @@ services:
   CodingFreaks\CfCookiemanager\Controller\CookieSettingsBackendController:
     public: true
     tags: [ 'backend.controller' ]
+
+  # ...
+  CodingFreaks\CfCookiemanager\Hooks\ContentObjectRendererHook:
+    tags:
+      - name: frontend.contentobject
+        identifier: 'CONTENT'
