--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "license": "GPL-2.0-or-later",
     "require": {
-        "php": "^7.4 || ^8.1",
+        "php": "^7.4 || ^8.1 || ^8.2",
         "typo3/cms-core": "^11.5 || ^12.1",
         "ext-xml": "*"
     },
