[TASK] Fix Boostrap 4 and added Info to Doc Settings.cfg

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -50,16 +50,16 @@ github_repository    = https://github.com/eibiflo/cf_cookiemanager/
 project_contact      =
 
 # URL of online discussions, you can leave this blank
-project_discussions  =
+project_discussions  = https://typo3.slack.com/archives/C04NB2ZP30U
 
 # URL of webpage of your extension (if it has one)
-project_home         =
+project_home         = https://cookieapi.coding-freaks.com/
 
 # URL to Issues
-project_issues       =
+project_issues       = https://github.com/eibiflo/cf_cookiemanager/issues
 
 # URL of repository
-project_repository   =
+project_repository   = https://github.com/eibiflo/cf_cookiemanager/
 
 [intersphinx_mapping]
 
