--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     "require": {
         "php": "^7.4 || ^8.1 || ^8.2",
         "typo3/cms-core": "^11.5 || ^12.1",
-        "ext-xml": "*"
+        "ext-xml": "*",
+        "ext-libxml": "*",
+        "ext-dom": "*"
     },
 
     "require-dev": {
