--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require": {
         "php": "^7.4 || ^8.1 || ^8.2",
         "typo3/cms-core": "^11.5 || ^12.1",
+        "typo3/cms-dashboard": "^11.5 || ^12.1",
         "ext-xml": "*",
         "ext-libxml": "*",
         "ext-dom": "*"
@@ -42,7 +43,11 @@
     },
     "config": {
         "vendor-dir": ".Build/vendor",
-        "bin-dir": ".Build/bin"
+        "bin-dir": ".Build/bin",
+        "allow-plugins": {
+            "typo3/class-alias-loader": true,
+            "typo3/cms-composer-installers": true
+        }
     },
     "scripts": {
         "post-autoload-dump": [
