--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
 
     "require-dev": {
-        "typo3/testing-framework": "^6.9.0"
+        "typo3/testing-framework": "*"
     },
     "autoload": {
         "psr-4": {
