--- a/.github/workflows/core12.yml
+++ b/.github/workflows/core12.yml
@@ -23,26 +23,23 @@ jobs:
       - name: Lint PHP
         run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s lint
 
-      - name: Validate code against CGL
-        run: PHP_CS_FIXER_IGNORE_ENV=1 Build/Scripts/runTests.sh -t 12 -p 8.1 -s cgl -n
-
       - name: Unit Tests
-        run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s unit
+        run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s functional
 
-      - name: Functional Tests with mariadb and mysqli
-        run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d mariadb -a mysqli -s functional
+      #- name: Functional Tests with mariadb and mysqli
+      #  run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d mariadb -a mysqli -s functional
 
-      - name: Functional Tests with mariadb and pdo_mysql
-        run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d mariadb -a pdo_mysql -s functional
+     # - name: Functional Tests with mariadb and pdo_mysql
+     #   run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d mariadb -a pdo_mysql -s functional
 
-      - name: Functional Tests with mysql and mysqli
-        run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d mysql -a mysqli -s functional
+     # - name: Functional Tests with mysql and mysqli
+     #   run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d mysql -a mysqli -s functional
 
-      - name: Functional Tests with mysql and pdo_mysql
-        run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d mysql -a pdo_mysql -s functional
+     # - name: Functional Tests with mysql and pdo_mysql
+     #   run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d mysql -a pdo_mysql -s functional
 
-      - name: Functional Tests with postgres
-        run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d postgres -s functional
+     # - name: Functional Tests with postgres
+     #   run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d postgres -s functional
 
       # @todo disabled, due cross dbmns issues in code. Should be fixed first
       # - name: Functional Tests with sqlite
