--- a/.github/workflows/core11.yml
+++ b/.github/workflows/core11.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         php: [ '7.4', '8.0', '8.1', '8.2' ]
-        composerInstall: [ 'composerInstallLowest', 'composerInstallHighest' ]
+        composerInstall: [ 'composerInstallHighest' ] # //maybe also Support composerInstallLowest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
