--- a/.github/workflows/core12.yml
+++ b/.github/workflows/core12.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         php: [ '8.1', '8.2' ]
-        composerInstall: [ 'composerInstallLowest', 'composerInstallHighest' ]
+        composerInstall: [ 'composerInstallHighest' ] # //maybe also Support composerInstallLowest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -25,22 +25,3 @@ jobs:
 
       - name: Unit Tests
         run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s functional
-
-      #- name: Functional Tests with mariadb and mysqli
-      #  run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d mariadb -a mysqli -s functional
-
-     # - name: Functional Tests with mariadb and pdo_mysql
-     #   run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d mariadb -a pdo_mysql -s functional
-
-     # - name: Functional Tests with mysql and mysqli
-     #   run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d mysql -a mysqli -s functional
-
-     # - name: Functional Tests with mysql and pdo_mysql
-     #   run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d mysql -a pdo_mysql -s functional
-
-     # - name: Functional Tests with postgres
-     #   run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d postgres -s functional
-
-      # @todo disabled, due cross dbmns issues in code. Should be fixed first
-      # - name: Functional Tests with sqlite
-      #   run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -d sqlite -s functional
