--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     },
 
     "require-dev": {
+        "typo3/tailor": "^1.5",
         "typo3/testing-framework": "*"
     },
     "autoload": {
