--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
 
     "require-dev": {
         "typo3/tailor": "^1.5",
-        "typo3/testing-framework": "*"
+        "typo3/testing-framework": "^7.0"
     },
     "autoload": {
         "psr-4": {
