--- a/.github/workflows/core12.yml
+++ b/.github/workflows/core12.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         php: [ '8.1', '8.2' ]
-        composerInstall: [ 'composerInstallLowest','composerInstallHighest' ] # //maybe also Support composerInstallLowest
+        composerInstall: [ 'composerInstallHighest' ] # //maybe also Support composerInstallLowest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
