--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -52,3 +52,8 @@ services:
     public: true
     arguments:
       $eventDispatcher: '@Psr\EventDispatcher\EventDispatcherInterface'
+
+  CodingFreaks\CfCookiemanager\EventListener\AddIntroJsModule:
+    tags:
+      - name: event.listener
+        event: TYPO3\CMS\Backend\Controller\Event\BeforeFormEnginePageInitializedEvent
