[TASK] Optimized/Refactored Unit Tests

--- a/.github/workflows/core11.yml
+++ b/.github/workflows/core11.yml
@@ -26,5 +26,8 @@ jobs:
       - name: Lint PHP
         run: Build/Scripts/runTests.sh -t 11 -p ${{ matrix.php }} -s lint
 
-      - name: Unit Tests
+      - name: Functional Tests
         run: Build/Scripts/runTests.sh -t 11 -p ${{ matrix.php }} -s functional
+
+      - name: Unit Tests
+        run: Build/Scripts/runTests.sh -t 11 -p ${{ matrix.php }} -s unit
