--- a/.github/workflows/core12.yml
+++ b/.github/workflows/core12.yml
@@ -23,5 +23,8 @@ jobs:
       - name: Lint PHP
         run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s lint
 
-      - name: Unit Tests
+      - name: Functional Tests
         run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s functional
+
+      - name: Unit Tests
+        run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s unit
