--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
 
     "require-dev": {
         "typo3/tailor": "^1.5",
-        "phpunit/phpunit": "^10.1",
+        "phpunit/phpunit": "^9 || ^10.1",
         "typo3/testing-framework": "^7.0"
     },
     "autoload": {
