[TEST] codeception implementation basics

--- a/.github/workflows/core11.yml
+++ b/.github/workflows/core11.yml
@@ -31,3 +31,6 @@ jobs:
 
       - name: Unit Tests
         run: Build/Scripts/runTests.sh -t 11 -p ${{ matrix.php }} -s unit
+
+      - name: Backend Functional Demo Tests
+        run: Build/Scripts/runTests.sh -t 11 -p ${{ matrix.php }} -s acceptanceInstall
