--- a/.github/workflows/core12.yml
+++ b/.github/workflows/core12.yml
@@ -28,3 +28,6 @@ jobs:
 
       - name: Unit Tests
         run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s unit
+
+      - name: Backend Functional Demo Tests
+        run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s acceptanceInstall
