--- a/composer.json
+++ b/composer.json
@@ -37,12 +37,12 @@
         "typo3/cms-dashboard": "^11.5 || ^12.4",
         "typo3/cms-frontend": "^11.5 || ^12.4",
         "typo3/testing-framework": "^7.0",
-        "codeception/codeception": "^5.0.10",
-        "codeception/lib-asserts": "^2.1.0",
-        "codeception/module-asserts": "^3.0.0",
+        "codeception/codeception": "^4.2 || ^5.0.10",
+        "codeception/lib-asserts": "^1.0.0 || ^2.1.0",
+        "codeception/module-asserts": "^2.0.0 || ^3.0.0",
         "codeception/module-cli": "^2.0.1",
-        "codeception/module-filesystem": "^3.0.0",
-        "codeception/module-webdriver": "^4.0.0"
+        "codeception/module-filesystem": "^2.0.2 || ^3.0.0",
+        "codeception/module-webdriver": "^2.0.4 || ^4.0.0"
     },
     "autoload": {
         "psr-4": {
