[TEST] Added Frontend Test Demo and Added Middleware for Content Override

--- a/.github/workflows/core12.yml
+++ b/.github/workflows/core12.yml
@@ -30,4 +30,4 @@ jobs:
         run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s unit
 
       - name: Backend Functional Demo Tests
-        run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s acceptanceInstall
+        run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s acceptance
