--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,12 @@
         "codeception/module-asserts": "^2.0.0 || ^3.0.0",
         "codeception/module-cli": "^2.0.1",
         "codeception/module-filesystem": "^2.0.2 || ^3.0.0",
-        "codeception/module-webdriver": "^2.0.4 || ^4.0.0"
+        "codeception/module-webdriver": "^2.0.4 || ^4.0.0",
+        "phpstan/extension-installer": "1.3.1",
+        "phpstan/phpstan": "^1.10.33",
+        "phpstan/phpstan-phpunit": "^1.3.14",
+        "phpstan/phpstan-strict-rules": "^1.5.1",
+        "saschaegerer/phpstan-typo3": "^1.9.0"
     },
     "autoload": {
         "psr-4": {
