--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -1,3 +1,5 @@
+imports:
+  - { resource: Backend/DashboardWidgets.yaml }
 services:
   # general settings
   _defaults:
@@ -23,23 +25,6 @@ services:
     public: true
     tags: [ 'backend.controller' ]
 
-  dashboard.widget.consentTracking:
-    class: 'TYPO3\CMS\Dashboard\Widgets\BarChartWidget'
-    arguments:
-      $dataProvider: '@CodingFreaks\CfCookiemanager\Widgets\Provider\ConsentTrackingDataProvider'
-      $view: '@dashboard.views.widget'
-      #$buttonProvider: '@CCodingFreaks\CfCookiemanager\Widgets\Provider\ConsentTrackingButtonProvider'
-      $options:
-        refreshAvailable: true
-    tags:
-      - name: dashboard.widget
-        identifier: 'consentTracking'
-        groupNames: 'general'
-        title: 'Cookie Consent Tracking'
-        description: 'Optin/Optout Tracking'
-        iconIdentifier: 'content-widget-chart-bar'
-        height: 'medium'
-        width: 'medium'
 
   CodingFreaks\CfCookiemanager\Utility\RenderUtility:
     autowire: true
