--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
     ],
     "license": "GPL-2.0-or-later",
     "require": {
-        "php": "^7.4 || ^8.1 || ^8.2",
-        "typo3/cms-core": "^11.5 || ^12.4",
-        "typo3/cms-dashboard": "^11.5 || ^12.4",
+        "php": "^8.2",
+        "typo3/cms-core": "^12.4 || ^13.0.x-dev",
+        "typo3/cms-dashboard": "^12.4 || ^13.0.x-dev",
         "masterminds/html5": "^2.8",
         "ext-xml": "*",
         "ext-libxml": "*",
