--- a/.github/workflows/core13.yml
+++ b/.github/workflows/core13.yml
@@ -1,33 +1,33 @@
-name: core 11
+name: core 13
 
 on: [ push, pull_request ]
 
 jobs:
   tests:
-    name: v11
-    runs-on: ubuntu-20.04
+    name: v13
+    runs-on: ubuntu-22.04
     strategy:
       # This prevents cancellation of matrix job runs, if one/two already failed and let the
       # rest matrix jobs be executed anyway.
       fail-fast: false
       matrix:
-        php: [ '7.4', '8.1', '8.2' ]
+        php: [ '8.2', '8.3' ]
         composerInstall: [  'composerInstallHighest' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Validate composer.json and composer.lock
-        run: Build/Scripts/runTests.sh -t 11 -p ${{ matrix.php }} -s composer -e 'validate'
+        run: Build/Scripts/runTests.sh -t 13 -p ${{ matrix.php }} -s composer -e 'validate'
 
       - name: Install testing system
-        run: Build/Scripts/runTests.sh -t 11 -p ${{ matrix.php }} -s ${{ matrix.composerInstall }}
+        run: Build/Scripts/runTests.sh -t 13 -p ${{ matrix.php }} -s ${{ matrix.composerInstall }}
 
       - name: Lint PHP
-        run: Build/Scripts/runTests.sh -t 11 -p ${{ matrix.php }} -s lint
+        run: Build/Scripts/runTests.sh -t 13 -p ${{ matrix.php }} -s lint
 
       - name: Functional Tests
-        run: Build/Scripts/runTests.sh -t 11 -p ${{ matrix.php }} -s functional
+        run: Build/Scripts/runTests.sh -t 13 -p ${{ matrix.php }} -s functional
 
       - name: Unit Tests
-        run: Build/Scripts/runTests.sh -t 11 -p ${{ matrix.php }} -s unit
+        run: Build/Scripts/runTests.sh -t 13 -p ${{ matrix.php }} -s unit
