--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
     ],
     "license": "GPL-2.0-or-later",
     "require": {
-        "php": "^8.2",
-        "typo3/cms-core": "^12.4 || ^13.0.x-dev",
-        "typo3/cms-dashboard": "^12.4 || ^13.0.x-dev",
+        "php": "^8.1 || ^8.2",
+        "typo3/cms-core": "^12.4 || ^13.0",
+        "typo3/cms-dashboard": "^12.4 || ^13.0",
         "masterminds/html5": "^2.8",
         "ext-xml": "*",
         "ext-libxml": "*",
@@ -32,14 +32,14 @@
     },
 
     "require-dev": {
-        "typo3/tailor": "^1.5",
+
         "phpunit/phpunit": "^9 || ^10.1",
-        "typo3/cms-dashboard": "^11.5 || ^12.4",
-        "typo3/cms-tstemplate": "^11.5 || ^12.4",
-        "typo3/cms-frontend": "^11.5 || ^12.4",
-        "typo3/cms-seo": "^11.5 || ^12.4",
-        "typo3/testing-framework": "^7.0",
-        "typo3/cms-fluid-styled-content": "^11.5 || ^12.4",
+        "typo3/cms-dashboard": "^12.4 || ^13.0",
+        "typo3/cms-tstemplate": "^12.4 || ^13.0",
+        "typo3/cms-frontend": "^12.4 || ^13.0",
+        "typo3/cms-seo": "^12.4 || ^13.0",
+        "typo3/testing-framework": "^7.0 || ^8.0",
+        "typo3/cms-fluid-styled-content": "^12.4 || ^13.0",
         "codeception/codeception": "^4.2 || ^5.0.10",
         "codeception/lib-asserts": "^1.0.0 || ^2.1.0",
         "codeception/module-asserts": "^2.0.0 || ^3.0.0",
