--- a/composer.json
+++ b/composer.json
@@ -32,13 +32,12 @@
     },
 
     "require-dev": {
-
         "phpunit/phpunit": "^9 || ^10.1",
         "typo3/cms-dashboard": "^12.4 || ^13.0",
         "typo3/cms-tstemplate": "^12.4 || ^13.0",
         "typo3/cms-frontend": "^12.4 || ^13.0",
         "typo3/cms-seo": "^12.4 || ^13.0",
-        "typo3/testing-framework": "^7.0 || ^8.0",
+        "typo3/testing-framework": "^8.0",
         "typo3/cms-fluid-styled-content": "^12.4 || ^13.0",
         "codeception/codeception": "^4.2 || ^5.0.10",
         "codeception/lib-asserts": "^1.0.0 || ^2.1.0",
