--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "php": "^8.1 || ^8.2 || ^8.3",
         "typo3/cms-core": "^12.4 || ^13.0",
         "typo3/cms-dashboard": "^12.4 || ^13.0",
+        "typo3/cms-install": "^12.4 || ^13.0",
         "ext-xml": "*",
         "ext-libxml": "*",
         "ext-curl": "*"
@@ -38,6 +39,7 @@
         "typo3/cms-frontend": "^12.4 || ^13.0",
         "typo3/cms-seo": "^12.4 || ^13.0",
         "typo3/testing-framework": "^8.0",
+        "typo3/cms-install": "^12.4 || ^13.0",
         "typo3/cms-fluid-styled-content": "^12.4 || ^13.0",
         "codeception/codeception": "^4.2 || ^5.0.10",
         "codeception/lib-asserts": "^1.0.0 || ^2.1.0",
