--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
 
     "require-dev": {
-        "phpunit/phpunit": "^11.2.8",
+        "phpunit/phpunit": "^10.1 || ^11.2.8",
         "typo3/cms-dashboard": "^12.4 || ^13.0",
         "typo3/cms-tstemplate": "^12.4 || ^13.0",
         "typo3/cms-frontend": "^12.4 || ^13.0",
