--- a/.github/workflows/core13.yml
+++ b/.github/workflows/core13.yml
@@ -17,6 +17,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
       - name: Validate composer.json and composer.lock
         run: Build/Scripts/runTests.sh -t 13 -p ${{ matrix.php }} -s composer -e 'validate'
 
