--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -28,6 +28,9 @@ services:
   CodingFreaks\CfCookiemanager\Service\AutoconfigurationService:
     public: true
 
+  CodingFreaks\CfCookiemanager\Service\ThumbnailService:
+    public: true
+
   CodingFreaks\CfCookiemanager\Utility\RenderUtility:
     autowire: true
     public: true
