--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     ],
     "license": "GPL-2.0-or-later",
     "require": {
-        "php": "^8.1 || ^8.2 || ^8.3",
+        "php": "^8.1 || ^8.2 || ^8.3 || ^8.4",
         "typo3/cms-core": "^12.4 || ^13.0",
         "typo3/cms-dashboard": "^12.4 || ^13.0",
         "typo3/cms-install": "^12.4 || ^13.0",
