[TASK] Implemented a base logic for Database Upgrades and Review process for API and Local changes to keep Database Up-To-Date

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -41,3 +41,8 @@ services:
     tags:
       - name: event.listener
         event: TYPO3\CMS\Backend\Controller\Event\BeforeFormEnginePageInitializedEvent
+
+  CodingFreaks\CfCookiemanager\Controller\BackendAjax\UpdateCheckController:
+    public: true
+    arguments:
+      $responseFactory: '@Psr\Http\Message\ResponseFactoryInterface'
