[TASK] Code-Cleanup and Domain changes

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -53,7 +53,7 @@ project_contact      =
 project_discussions  = https://typo3.slack.com/archives/C04NB2ZP30U
 
 # URL of webpage of your extension (if it has one)
-project_home         = https://cookieapi.coding-freaks.com/
+project_home         = https://coding-freaks.com/
 
 # URL to Issues
 project_issues       = https://github.com/eibiflo/cf_cookiemanager/issues
