--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "name": "Florian Eibisberger",
             "role": "Developer",
             "email": "cookiemanager@coding-freaks.com",
-            "homepage": "https://cookieapi.coding-freaks.com"
+            "homepage": "https://coding-freaks.com"
         }
     ],
     "keywords": [
