--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -40,6 +40,9 @@ services:
   CodingFreaks\CfCookiemanager\Controller\BackendAjax\InstallController:
     public: true
 
+  CodingFreaks\CfCookiemanager\Controller\BackendAjax\ThumbnailController:
+    public: true
+
   CodingFreaks\CfCookiemanager\Updates\FrontendIdentifierUpdateWizard:
     class: CodingFreaks\CfCookiemanager\Updates\FrontendIdentifierUpdateWizard
     autowire: true
