--- a/composer.json
+++ b/composer.json
@@ -33,20 +33,20 @@
     },
 
     "require-dev": {
-        "phpunit/phpunit": "^11.2.8",
+        "phpunit/phpunit": "^12",
         "typo3/cms-dashboard": "^13.4",
         "typo3/cms-tstemplate": "^13.4",
         "typo3/cms-frontend": "^13.4",
         "typo3/cms-seo": "^13.4",
-        "typo3/testing-framework": "^8.0 || ^9.0",
+        "typo3/testing-framework": "^9.0",
         "typo3/cms-install": "^13.4",
         "typo3/cms-fluid-styled-content": "^13.4",
-        "codeception/codeception": "^4.2 || ^5.0.10",
-        "codeception/lib-asserts": "^1.0.0 || ^2.1.0",
-        "codeception/module-asserts": "^2.0.0 || ^3.0.0",
+        "codeception/codeception": "^5.0.10",
+        "codeception/lib-asserts": "^2.1.0",
+        "codeception/module-asserts": "^3.0.0",
         "codeception/module-cli": "^2.0.1",
-        "codeception/module-filesystem": "^2.0.2 || ^3.0.0",
-        "codeception/module-webdriver": "^2.0.4 || ^4.0.0"
+        "codeception/module-filesystem": "^3.0.0",
+        "codeception/module-webdriver": "^4.0.0"
     },
     "autoload": {
         "psr-4": {
