--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,13 @@
     "license": "GPL-2.0-or-later",
     "require": {
         "php": "^8.1 || ^8.2 || ^8.3 || ^8.4",
-        "typo3/cms-core": "^13.4",
+        "typo3/cms-core": "^13.4.15",
         "typo3/cms-dashboard": "^13.4",
         "typo3/cms-install": "^13.4",
         "ext-xml": "*",
         "ext-libxml": "*",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "linawolf/list-type-migration": "^1.0"
     },
 
     "require-dev": {
