[TASK] Prepare Update-Wizard for Liste-Type Migration

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -52,3 +52,10 @@ services:
     public: true
     tags:
       - name: typo3.install.updatewizard
+
+  CodingFreaks\CfCookiemanager\Updates\PluginListToCTypeUpdateWizard:
+    class: CodingFreaks\CfCookiemanager\Updates\PluginListToCTypeUpdateWizard
+    autowire: true
+    public: true
+    tags:
+      - name: typo3.install.updatewizard
