--- a/Configuration/Sets/CfCookiemanager/settings.definitions.yaml
+++ b/Configuration/Sets/CfCookiemanager/settings.definitions.yaml
@@ -113,7 +113,7 @@ settings:
 
   plugin.tx_cfcookiemanager_cookiefrontend.frontend.allow_data_collection:
     label: 'Allow Data Collection'
-    description: 'If active the usage data is shared with Ms-Clarity for this module.'
+    description: 'If active the usage data is shared with OpenTelemetry for this module.'
     category: CodingFreaksCookieManager.frontend
     type: bool
     default: false
