[TASK] Merge - Local Testing to 2.0

--- a/.github/workflows/core13.yml
+++ b/.github/workflows/core13.yml
@@ -1,35 +1,54 @@
-name: core 13
+name: TYPO3 13 Tests
 
-on: [ push, pull_request ]
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main, develop ]
 
 jobs:
-  tests:
-    name: v13
-    runs-on: ubuntu-22.04
-    strategy:
-      # This prevents cancellation of matrix job runs, if one/two already failed and let the
-      # rest matrix jobs be executed anyway.
-      fail-fast: false
-      matrix:
-        php: [ '8.3', '8.4' ]
-        composerInstall: [  'composerInstallHighest' ]
+  lint:
+    name: PHP Lint
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
+      - name: Run PHP Lint
+        run: Build/Scripts/runTests.sh -s lint -p 8.3
 
-      - name: Validate composer.json and composer.lock
-        run: Build/Scripts/runTests.sh -t 13 -p ${{ matrix.php }} -s composer -e 'validate'
+  unit:
+    name: Unit Tests (PHP ${{ matrix.php }})
+    runs-on: ubuntu-latest
+    needs: lint
+    strategy:
+      fail-fast: false
+      matrix:
+        php: ['8.3', '8.4']
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Install testing system
-        run: Build/Scripts/runTests.sh -t 13 -p ${{ matrix.php }} -s ${{ matrix.composerInstall }}
+      - name: Install dependencies
+        run: Build/Scripts/runTests.sh -s composerUpdate -t 13 -p ${{ matrix.php }}
 
-      - name: Functional Tests
-        run: Build/Scripts/runTests.sh -t 13 -p ${{ matrix.php }} -s functional
+      - name: Run Unit Tests
+        run: Build/Scripts/runTests.sh -s unit -p ${{ matrix.php }}
 
-      - name: Unit Tests
-        run: Build/Scripts/runTests.sh -t 13 -p ${{ matrix.php }} -s unit
+  functional:
+    name: Functional Tests (PHP ${{ matrix.php }})
+    runs-on: ubuntu-latest
+    needs: lint
+    strategy:
+      fail-fast: false
+      matrix:
+        php: ['8.3', '8.4']
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: Build/Scripts/runTests.sh -s composerUpdate -t 13 -p ${{ matrix.php }}
+
+      - name: Run Functional Tests
+        run: Build/Scripts/runTests.sh -s functional -p ${{ matrix.php }}
