--- a/.github/workflows/core14.yml
+++ b/.github/workflows/core14.yml
@@ -1,36 +1,54 @@
-name: core 14
+name: TYPO3 14 Tests
 
-on: [ push, pull_request ]
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main, develop ]
 
 jobs:
-  tests:
-    name: v12
-    runs-on: ubuntu-22.04
-    strategy:
-      # This prevents cancellation of matrix job runs, if one/two already failed and let the
-      # rest matrix jobs be executed anyway.
-      fail-fast: false
-      matrix:
-        php: [ '8.3', '8.4' ]
-        composerInstall: [ 'composerInstallHighest' ] # //maybe also Support composerInstallLowest
+  lint:
+    name: PHP Lint
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
+      - name: Run PHP Lint
+        run: Build/Scripts/runTests.sh -s lint -p 8.4
 
-      - name: Install testing system
-        run: Build/Scripts/runTests.sh -t 14 -p ${{ matrix.php }}  -s ${{ matrix.composerInstall }}
+  unit:
+    name: Unit Tests (PHP ${{ matrix.php }})
+    runs-on: ubuntu-latest
+    needs: lint
+    strategy:
+      fail-fast: false
+      matrix:
+        php: ['8.3', '8.4']
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Functional Tests
-        run: Build/Scripts/runTests.sh -t 14 -p ${{ matrix.php }} -s functional
+      - name: Install dependencies
+        run: Build/Scripts/runTests.sh -s composerUpdate -t 14 -p ${{ matrix.php }}
 
-      - name: Unit Tests
-        run: Build/Scripts/runTests.sh -t 14 -p ${{ matrix.php }} -s unit
+      - name: Run Unit Tests
+        run: Build/Scripts/runTests.sh -s unit -p ${{ matrix.php }}
 
-      # TODO Refactor to 13 Core tests using apache2 instead of php -S
-      #- name: Backend Functional Demo Tests
-      #  run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s acceptance
+  functional:
+    name: Functional Tests (PHP ${{ matrix.php }})
+    runs-on: ubuntu-latest
+    needs: lint
+    strategy:
+      fail-fast: false
+      matrix:
+        php: ['8.3', '8.4']
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: Build/Scripts/runTests.sh -s composerUpdate -t 14 -p ${{ matrix.php }}
+
+      - name: Run Functional Tests
+        run: Build/Scripts/runTests.sh -s functional -p ${{ matrix.php }}
