--- a/.github/workflows/core13.yml
+++ b/.github/workflows/core13.yml
@@ -1,10 +1,11 @@
 name: TYPO3 13 Tests
 
-on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main, develop ]
+on: [ push, pull_request ]
+#on:
+#  push:
+#    branches: [ main, develop ]
+#  pull_request:
+#    branches: [ main, develop ]
 
 jobs:
   lint:
