--- a/.github/workflows/core14.yml
+++ b/.github/workflows/core14.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: Build/Scripts/runTests.sh -s composerUpdate -t 14 -p ${{ matrix.php }}
+        run: Build/Scripts/runTests.sh -s composerInstall -p ${{ matrix.php }}
 
       - name: Run Unit Tests
         run: Build/Scripts/runTests.sh -s unit -p ${{ matrix.php }}
@@ -49,7 +49,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: Build/Scripts/runTests.sh -s composerUpdate -t 14 -p ${{ matrix.php }}
+        run: Build/Scripts/runTests.sh -s composerInstall -p ${{ matrix.php }}
 
       - name: Run Functional Tests
         run: Build/Scripts/runTests.sh -s functional -p ${{ matrix.php }}
