--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "license": "GPL-2.0-or-later",
     "require": {
         "php": "^8.1 || ^8.2 || ^8.3 || ^8.4",
-        "typo3/cms-core": "^13.4.15 || ^14.0",
+        "typo3/cms-core": "^13.0",
         "typo3/cms-dashboard": "^13.4 || ^14.0",
         "typo3/cms-install": "^13.4 || ^14.0",
         "ext-xml": "*",
@@ -34,11 +34,19 @@
 
     "require-dev": {
         "phpunit/phpunit": "^12",
-        "typo3/testing-framework": "^9.0",
+        "typo3/cms-dashboard": "^13.4 || ^14.0",
         "typo3/cms-tstemplate": "^13.4 || ^14.0",
         "typo3/cms-frontend": "^13.4 || ^14.0",
         "typo3/cms-seo": "^13.4 || ^14.0",
-        "typo3/cms-fluid-styled-content": "^13.4 || ^14.0"
+        "typo3/testing-framework": "^9.0",
+        "typo3/cms-install": "^13.4 || ^14.0",
+        "typo3/cms-fluid-styled-content": "^13.4 || ^14.0",
+        "codeception/codeception": "^5.0.10",
+        "codeception/lib-asserts": "^2.1.0",
+        "codeception/module-asserts": "^3.0.0",
+        "codeception/module-cli": "^2.0.1",
+        "codeception/module-filesystem": "^3.0.0",
+        "codeception/module-webdriver": "^4.0.0"
     },
     "autoload": {
         "psr-4": {
@@ -64,15 +72,6 @@
     "scripts": {
         "post-autoload-dump": [
             "TYPO3\\TestingFramework\\Composer\\ExtensionTestEnvironment::prepare"
-        ],
-        "test:unit": "Build/Scripts/runTests.sh -s unit",
-        "test:unit:cover": "Build/Scripts/runTests.sh -s unit -e '--coverage-text'",
-        "test:functional": "Build/Scripts/runTests.sh -s functional",
-        "test:lint": "Build/Scripts/runTests.sh -s lint",
-        "test:phpstan": "Build/Scripts/runTests.sh -s phpstan",
-        "test:all": [
-            "@test:lint",
-            "@test:unit"
         ]
     },
     "extra": {
