[TEST] Actions runner

--- a/.github/workflows/core13.yml
+++ b/.github/workflows/core13.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install testing system
-        run: Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composerUpdate -t 13
+      - name: Install dependencies
+        run: Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "install --no-progress --no-interaction"
 
       - name: Run Unit Tests
         run: Build/Scripts/runTests.sh -s unit -p ${{ matrix.php }}
@@ -48,8 +48,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install testing system
-        run: Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composerUpdate -t 13
+      - name: Install dependencies
+        run: Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "install --no-progress --no-interaction"
 
       - name: Run Functional Tests
         run: Build/Scripts/runTests.sh -s functional -p ${{ matrix.php }}
