--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
     "license": "GPL-2.0-or-later",
     "require": {
         "php": "^8.1 || ^8.2 || ^8.3 || ^8.4",
-        "typo3/cms-core": "^13.0",
-        "typo3/cms-dashboard": "^13.4 || ^14.0",
-        "typo3/cms-install": "^13.4 || ^14.0",
+        "typo3/cms-core": "^13.4.21 || ^14.0",
+        "typo3/cms-dashboard": "^13.4.21 || ^14.0",
+        "typo3/cms-install": "^13.4.21 || ^14.0",
         "ext-xml": "*",
         "ext-libxml": "*",
         "ext-curl": "*"
@@ -34,13 +34,11 @@
 
     "require-dev": {
         "phpunit/phpunit": "^12",
-        "typo3/cms-dashboard": "^13.4 || ^14.0",
-        "typo3/cms-tstemplate": "^13.4 || ^14.0",
-        "typo3/cms-frontend": "^13.4 || ^14.0",
-        "typo3/cms-seo": "^13.4 || ^14.0",
+        "typo3/cms-tstemplate": "^13.4.21 || ^14.0",
+        "typo3/cms-frontend": "^13.4.21 || ^14.0",
+        "typo3/cms-seo": "^13.4.21 || ^14.0",
         "typo3/testing-framework": "^9.0",
-        "typo3/cms-install": "^13.4 || ^14.0",
-        "typo3/cms-fluid-styled-content": "^13.4 || ^14.0",
+        "typo3/cms-fluid-styled-content": "^13.4.21 || ^14.0",
         "codeception/codeception": "^5.0.10",
         "codeception/lib-asserts": "^2.1.0",
         "codeception/module-asserts": "^3.0.0",
