--- a/.github/workflows/core14.yml
+++ b/.github/workflows/core14.yml
@@ -30,10 +30,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install TYPO3 14 dependencies
+      - name: Prepare permissions
         run: |
+          touch composer.lock
           chmod 666 composer.json composer.lock
-          Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "require typo3/cms-core:^14.0 --no-progress --no-interaction"
+          mkdir -p .Build/.cache
+          chmod -R 777 .Build
+
+      - name: Install TYPO3 14 dependencies
+        run: Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "require typo3/cms-core:^14.0 --no-progress --no-interaction"
 
       - name: Run Unit Tests
         run: Build/Scripts/runTests.sh -s unit -p ${{ matrix.php }}
@@ -50,10 +55,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install TYPO3 14 dependencies
+      - name: Prepare permissions
         run: |
+          touch composer.lock
           chmod 666 composer.json composer.lock
-          Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "require typo3/cms-core:^14.0 --no-progress --no-interaction"
+          mkdir -p .Build/.cache
+          chmod -R 777 .Build
+
+      - name: Install TYPO3 14 dependencies
+        run: Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "require typo3/cms-core:^14.0 --no-progress --no-interaction"
 
       - name: Run Functional Tests
         run: Build/Scripts/runTests.sh -s functional -p ${{ matrix.php }}
