--- a/Configuration/Sets/CfCookiemanager/settings.definitions.yaml
+++ b/Configuration/Sets/CfCookiemanager/settings.definitions.yaml
@@ -20,6 +20,13 @@ settings:
     type: bool
     default: true
 
+  plugin.tx_cfcookiemanager_cookiefrontend.frontend.no_autorun_on_legal:
+    label: 'Disable Run Consent Modal on Legal Pages'
+    description: 'If enabled, the cookie consent modal will not be shown on page load, if the current page is the impress or data policy page'
+    category: CodingFreaksCookieManager.frontend
+    type: bool
+    default: true
+
   plugin.tx_cfcookiemanager_cookiefrontend.frontend.force_consent:
     label: 'Enable if you want to block page navigation until user consent action (Needed autorun_consent = 1)'
     description: 'If enabled, the page will be blocked until the user has given his consent'
