--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,9 @@
         "codeception/module-asserts": "^3.0.0",
         "codeception/module-cli": "^2.0.1",
         "codeception/module-filesystem": "^3.0.0",
-        "codeception/module-webdriver": "^4.0.0"
+        "codeception/module-webdriver": "^4.0.0",
+        "phpstan/phpstan": "^2.1",
+        "saschaegerer/phpstan-typo3": "^3.0"
     },
     "autoload": {
         "psr-4": {
