[TASK] Using DEV-Main for now https://github.com/sascha-egerer/phpstan-typo3/issues/186

--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         "codeception/module-filesystem": "^3.0.0",
         "codeception/module-webdriver": "^4.0.0",
         "phpstan/phpstan": "^2.1",
-        "saschaegerer/phpstan-typo3": "^3.0"
+        "saschaegerer/phpstan-typo3": "^2.1 || dev-main@dev"
     },
     "autoload": {
         "psr-4": {
