--- a/Tests/codeception.yml
+++ b/Tests/codeception.yml
@@ -16,5 +16,5 @@ modules:
     - Filesystem
     #- TYPO3\CMS\Core\Tests\Acceptance\Support\Helper\Config
 params:
-  #- parameters.yml
+  - parameters.yml
   - env
