--- a/.github/workflows/core14.yml
+++ b/.github/workflows/core14.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install TYPO3 14 dependencies
         run: |
           mkdir -p .Build/.cache
-          chmod -R 777 .
+          sudo chmod -R 777 .
           Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "require typo3/cms-core:^14.0 --no-progress --no-interaction"
 
       - name: Run Unit Tests
@@ -54,7 +54,7 @@ jobs:
       - name: Install TYPO3 14 dependencies
         run: |
           mkdir -p .Build/.cache
-          chmod -R 777 .
+          sudo chmod -R 777 .
           Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "require typo3/cms-core:^14.0 --no-progress --no-interaction"
 
       - name: Run Functional Tests
@@ -75,10 +75,10 @@ jobs:
       - name: Install TYPO3 14 dependencies
         run: |
           mkdir -p .Build/.cache
-          chmod -R 777 .
+          sudo chmod -R 777 .
           Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "require typo3/cms-core:^14.0 --no-progress --no-interaction"
 
       - name: Run Acceptance Tests
         run: |
-          chmod -R 777 .Build
+          sudo chmod -R 777 .Build
           Build/Scripts/runTests.sh -s acceptance -p ${{ matrix.php }} -t 14
