--- a/.github/workflows/core13.yml
+++ b/.github/workflows/core13.yml
@@ -79,6 +79,4 @@ jobs:
           Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "update --no-progress --no-interaction"
 
       - name: Run Acceptance Tests
-        run: |
-          sudo chmod -R 777 .Build
-          Build/Scripts/runTests.sh -s acceptance -p ${{ matrix.php }}
+        run: Build/Scripts/runTests.sh -s acceptance -p ${{ matrix.php }}
